updated page text

--- a/aboutme.html
+++ b/aboutme.html
@@ -62,7 +62,7 @@
   <section class="wrapper">
     <div>
     <p>I'm always looking to put my particular set of skills to work for those with a willingness to invest in my future. My <a href="https://www.linkedin.com/in/classicyuppie">Linkedin</a> profile has a listing of my full work experience and certifications.</p>
-    <p>I have coded, hacked, tweaked and patched my way through WordPress, Ghost, Jekyll, PHP, JS, HTML, CSS, Sass, Linux, OS X and Windows. I'm great at breaking things, and even better at fixing them.</p>
+    <p>I have coded, hacked, tweaked and patched my way through WordPress, Ghost, Jekyll, PHP, JS, HTML, CSS, Sass, Git, Linux, OS X and Windows. I'm great at breaking things, and even better at fixing them.</p>
     <p>Give me a fast Internet connection, a Mac, my iTunes playlists, and watch the magic happen.</p>
     </div>
   </section>
