--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>John Fox: My Digital Life</title>
-<!--<style type="text/css">
+<style type="text/css">
   @import url("//fonts.googleapis.com/css?family=Roboto:100");
   html,
   body {
@@ -56,7 +56,7 @@
     html { background: #000 no-repeat center center fixed; }
     #bgvid { display: none; }
   }
-</style>-->
+</style>
 </head>
 <body>
   <!--{% include header.html %}-->
