--- a/aboutme.html
+++ b/aboutme.html
@@ -1,69 +1,19 @@
+---
+layout: null
+---
+
 <!DOCTYPE html>
 <html>
 <head>
+  {% include head.html %}
   <title>John Fox: My Digital Life</title>
-  <style type="text/css">
-  @import url("//fonts.googleapis.com/css?family=Roboto:100");
-  html,
-  body {
-    height: 100%;
-  }
-  body {
-    background-color: #efefef;
-    margin: 0;
-    padding: 0;
-  }
-  .wrapper {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    height: 100%;
-    background-color: rgba(0,0,0,0.6);
-  }
-  p {
-    color: #ffffff;
-    font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-weight: 100;
-    font-size: 42px;
-    line-height: 56px;
-    margin: 0 0 0.5em 0;
-    padding: 0;
-  }
-  p a {
-      color: #7bbaf7;
-      text-decoration: none;
-      transition: all 0.2s;
-  }
-  p a:hover,
-  p a:focus {
-      text-decoration: underline;
-  }
-  .wrapper > div {
-    display: block;
-    width: auto;
-    max-width: 50%;
-    height: auto;
-    margin: auto;
-  }
-
-  @media only screen and (max-width: 767px) {
-    .wrapper > div {
-      max-width: 90%;
-    }
-  }
-  @media screen and (max-device-width: 800px) {
-    html { background: #000 no-repeat center center fixed; }
-    #bgvid { display: none; }
-  }
-  </style>
 </head>
 <body>
   <section class="wrapper">
     <div>
-    <p>GUIs have their place, but I'll take a terminal prompt anyday.</p>
+    <p>GUIs have their place, but I'll take a command line anyday.</p>
     <p>I have coded, hacked, tweaked and patched my way through WordPress, Ghost, PHP, JS, HTML, CSS, Sass, Git, Linux, OS X and Windows. I'm great at breaking things, and even better at fixing them.</p>
-    <p>Want to know more? Check out my full work experience and certifications on <a href="https://www.linkedin.com/in/classicyuppie">Linkedin</a> or <a href="mailto:john@classicyuppie.com">get in touch</a>.</p>
+    <p>Want to know more? Check out my work experience and certifications on <a href="https://www.linkedin.com/in/classicyuppie">Linkedin</a> or <a href="mailto:john@classicyuppie.com">get in touch</a>.</p>
     </div>
   </section>
 </body>
