--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@ layout: null
   <title>John Fox: My Digital Life</title>
 </head>
 <body>
-  <!--{% include header.html %}-->
+  <a href="https://github.com/classicyuppie/classicyuppie.github.io"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/652c5b9acfaddf3a9c326fa6bde407b87f7be0f4/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6f72616e67655f6666373630302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png"></a>
   <section class="wrapper">
     <div>
+    <p>&nbsp;</p>
     <p>My name is <a href="/aboutme.html">John Fox</a>.</p>
     <p>I crave delicious design. I have a fetish for minimalism and a man-crush on <a href="https://en.wikipedia.org/wiki/Jonathan_Ive">Jony Ive</a> and <a href="https://www.vitsoe.com/gb/about/good-design">Dieter Rams</a>.</p>
     <p>My life includes evangelizing technology <a href="http://classicyuppie.com">here</a>, being social <a href="http://twitter.com/classicyuppie/">here</a>, and posting photos <a href="http://instagram.com/classicyuppie">here</a>.</p>
