Updating aboutme.html text

--- a/aboutme.html
+++ b/aboutme.html
@@ -14,7 +14,7 @@ layout: null
     <p>&nbsp;</p>
     <p>GUIs have their place, but I'll take a command line anyday.</p>
     <p>I have coded, hacked, tweaked and patched my way through WordPress, Ghost, PHP, JS, HTML, CSS, Sass, Git, Linux, OS X and Windows. I'm great at breaking things, and even better at fixing them.</p>
-    <p>Want to know more? Check out my work experience and certifications on <a href="https://www.linkedin.com/in/classicyuppie">Linkedin</a> or <a href="mailto:john@classicyuppie.com">get in touch</a>.</p>
+    <p>Want to know more? Check out my work experience on <a href="https://www.linkedin.com/in/classicyuppie">Linkedin</a> or <a href="mailto:john@classicyuppie.com">get in touch</a>.</p>
     </div>
   </section>
 </body>
